--- a/CSS-Files/home.css
+++ b/CSS-Files/home.css
@@ -1,4 +1,4 @@
-
+/* start header */
 header {
     height: 60px;
     align-items: center;
@@ -31,10 +31,10 @@ header .container {
     color: var(--font-color);
 
 }
-/* 
+
 header .logo {
     text-transform: uppercase;
-    font-size: 10px;
+    font-size: 15px;
 }
 
 header .logo h2 a {
@@ -42,8 +42,8 @@ header .logo h2 a {
 }
 
 header .logo span {
-    color: #D36B00;
-} */
+    color: #8E05C2;
+}
 
 header .button {
     display: none;
@@ -85,7 +85,7 @@ header .nav ul li {
 }
 
 header .nav ul li:hover {
-    background-color: #D36B00;
+    background-color: #8E05C2;
 
 }
 
@@ -111,7 +111,7 @@ p {
 
     header .nav ul li {
         padding: 5px;
-        margin-right: 5px;
+        margin-right: 10px;
     }
 }
 
@@ -153,7 +153,7 @@ height: 20vh;
 
 .hero{
 
-    background-image: var(--image);
+    background: var(--image);
     width: 100%;
     height: 100vh;
     background-position: center;
@@ -171,13 +171,16 @@ height: 20vh;
   .hero-text {
     text-align: center;
     position: absolute;
-    top: 45%;
+    top: 50%;
     left: 40%;
     transform: translate(-50%, -50%);
     color: var(--font-color);
     z-index:1;
   }
-  
+  .hero-text h1 {
+    font-size: 50px;
+    margin-bottom:30px ;
+  }
   .hero-text a button  {
 
     display: inline-block;
@@ -202,45 +205,370 @@ height: 20vh;
     box-shadow: 0 5px #6A5975;
     transform: translateY(4px);
   }
-  
-  #whatIs .container {
+
+
+
+/* body {
+  background: #f6f5f7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: "Montserrat", sans-serif;
+  height: 100vh;
+  margin: -20px 0 50px;
+} */
+
+.hero h1 {
+  font-weight: bold;
+  margin: 0;
+  color: var(--font-color);
+}
+
+.hero .container h2 {
+  text-align: center;
+  color: white;
+  font-size: 40px;
+}
+
+.hero .container p {
+  font-size: 14px;
+  font-weight: 100;
+  line-height: 20px;
+  letter-spacing: 0.5px;
+  margin: 20px 0 30px;
+  color: white;
+}
+
+.hero .container span {
+  font-size: 12px;
+}
+
+.hero .container a {
+  color: var(--font-color);
+  font-size: 14px;
+  text-decoration: none;
+  margin: 15px 0;
+}
+
+.hero .container button {
+  border-radius: 20px;
+  border: 1px solid #700B97;
+  background-color: #700B97;
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 10px 25px;
+  letter-spacing: 1px;
+  margin-top: 10px;
+  text-transform: uppercase;
+  transition: transform 80ms ease-in;
+}
+
+.hero .container button:active {
+  transform: scale(0.95);
+}
+
+.hero .container button:focus {
+  outline: none;
+}
+
+.hero .container button.ghost {
+  background-color: transparent;
+  border-color: #ffffff;
+}
+
+.hero .container form {
+  background-color: var(--nav-color);
+  color: var(--font-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 50px;
+  height: 100%;
+  text-align: center;
+}
+
+.hero .container input {
+  background-color: #eee;
+  border: none;
+  padding: 12px 15px;
+  margin: 8px 0;
+  width: 100%;
+}
+
+.hero .container{
+  background-color: var(--card-color);
+  border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  position: relative;
+  overflow: hidden;
+  width: 768px;
+  max-width: 100%;
+  min-height: 480px;
+  transition: 0.3s;
+  opacity: 0;
+  transform: translateY(50px);
+ z-index: -6;
+ transition: 0.5s;
+}
+
+.hero .container .form-container {
+  position: absolute;
+  top: 0;
+  /* transform: translateY(-50%); */
+  height: 100%;
+  transition: all 0.6s ease-in-out;
+}
+
+.hero .container .sign-in-container {
+  left: 0;
+  width: 50%;
+  z-index: 2;
+}
+
+.hero .container.right-panel-active .sign-in-container {
+  transform: translateX(100%);
+}
+
+.hero .container .sign-up-container {
+  left: 0;
+  width: 50%;
+  opacity: 0;
+  z-index: 1;
+}
+
+.container.right-panel-active .sign-up-container {
+  transform: translateX(100%);
+  opacity: 1;
+  z-index: 5;
+  animation: show 0.6s;
+}
+
+@keyframes show {
+  0%,
+  49.99% {
+    opacity: 0;
+    z-index: 1;
+  }
+
+  50%,
+  100% {
+    opacity: 1;
+    z-index: 5;
+  }
+}
+
+.hero .container .overlay-container {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  left: 50%;
+  width: 50%;
+  overflow: hidden;
+  transition: transform 0.6s ease-in-out;
+  z-index: 100;
+}
+
+.container.right-panel-active .overlay-container {
+  transform: translateX(-100%);
+}
+
+.overlay {
+  background: #700B97;
+  background: -webkit-linear-gradient(to right, #700B97, #9225bd);
+  background: linear-gradient(to right, #700B97, #9225bd);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0 0;
+  color: #ffffff;
+  position: relative;
+  left: -100%;
+  height: 100%;
+  width: 200%;
+  transform: translateX(0);
+  transition: transform 0.6s ease-in-out;
+}
+
+.container.right-panel-active .overlay {
+  transform: translateX(50%);
+}
+
+.overlay-panel {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  text-align: center;
+  top: 0;
+  height: 100%;
+  width: 50%;
+  transform: translateX(0);
+  transition: transform 0.6s ease-in-out;
+}
+
+.overlay-left {
+  transform: translateX(-20%);
+}
+
+.container.right-panel-active .overlay-left {
+  transform: translateX(0);
+}
+
+.overlay-right {
+  right: 0;
+  transform: translateX(0);
+}
+
+.container.right-panel-active .overlay-right {
+  transform: translateX(20%);
+}
+
+.social-container {
+  margin: 20px 0;
+}
+
+.social-container a {
+  border: 1px solid #dddddd;
+  border-radius: 50%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 5px;
+  height: 40px;
+  width: 40px;
+}
+.join {
+  color: black;
+}
+.activelog {
+  opacity: 1 !important;
+  transform: translateY(50px) !important;
+  z-index: 4 !important;
+}
+.blur {
+  transition-delay: 0.2s;
+  filter: blur(10px);
+  overflow: hidden;
+}
+#close {
+  background-color: #39313C;
+  z-index: 100;
+  position: absolute;
+  width: 35PX;
+  padding: 10px;
+  transition: 0.3s;
+  cursor: pointer;
+}
+#close:hover {
+  background-color: red;
+}
+@media (max-width: 767px) {
+  .overlay-panel {
+    padding: 0 15px;
+  }
+  .hero .container form {
+    padding: 0 15px;
+  }
+  .hero h1 {
+    font-size: 25px;
+  }
+  .hero .container h2 {
+    font-size: 25px;
+  }
+  .hero-text {
+    top: 50%;
+    left: 50%;
+  }
+  .hero-text h1 {
+    font-size: 30px;
+  }
+}
+
+  .whatIs  {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    
     }
 
   #whatIs div {
-  /* border: solid #000 3px; */
-  margin: 5%;
+  margin-bottom: 30px;
   background-color: var(--card-color);
-  padding: 3%;
+  padding: 15px;
   border-radius: 5%;
-  text-align: center;
-  box-shadow: 3px 3px 3px 3px #D36B00 ;
-  width: 500px;
+  text-align: l;
+  box-shadow: 5px 7px 15px 2px #4a22609a;
+  width: 350px;
   max-width: 100%;
+  transition: 0.3s;
+  position: relative;
+  overflow: hidden;
+  }
+  #whatIs div::after{
+    content: '';
+    position: absolute;
+    height: 0%;
+    width: 0px;
+    top: 100%;
+    left: 0;
+    transform: translateY(-50%);
+    background-color: var(--font-color);
+    transition: 0.3s;
+  }
+  #whatIs div:hover::after {
+    width: 5px;
+    height: 100%;
+    top: 50%;
+    }
+  #whatIs div::before{
+    content: '';
+    position: absolute;
+    height: 0%;
+    width: 0px;
+    top: 0%;
+    right:  0;
+    transform: translateY(-50%);
+    background-color: var(--font-color);
+    transition: 0.6s;
+  }
+  #whatIs div:hover::before {
+    width: 5px;
+    height: 100%;
+    top: 50%;
+
 
   }
-  #whatIs div h1{
+  #whatIs div h2{
+    height: 25%;
     margin: 2%;
     padding: 2%;
-
+    font-size: 20px;
   }
   #whatIs div p {
-    margin: 2%;
+    margin: 2% 0;
     padding: 2%;
+    line-height: 1.7;
   }
-  
+  @media (max-width: 767px) {
+    .whatIs {
+      justify-content:center;
+    }
+    #whatIs div {
+      width: 450px;
+    }
+  }
   main{
     display: flex;
     flex-direction: column;
   }
-
   #heading{
-
     text-align: center;
     color: #000;
-    margin-top: 5%;
+    margin:60px 0;
   }
 
   footer{
@@ -248,4 +576,5 @@ height: 20vh;
     background-color: var(--nav-color);
     height: 5vh;
     line-height: 2.5;
+    margin-top: 50px;
   }
