--- a/CSS-Files/home.css
+++ b/CSS-Files/home.css
@@ -376,9 +376,7 @@ height: 20vh;
 }
 
 .overlay {
-  background: #700B97;
-  background: -webkit-linear-gradient(to right, #700B97, #9225bd);
-  background: linear-gradient(to right, #700B97, #9225bd);
+  background: linear-gradient(to right, #8004ae, #bc07ff);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0 0;
@@ -577,4 +575,38 @@ height: 20vh;
     height: 5vh;
     line-height: 2.5;
     margin-top: 50px;
+  }
+
+  main #heading h1{
+    position: relative;
+    display: inline-block;
+  }
+  main #heading h1::before {
+    content: "";
+    position: absolute;
+    width:0%;
+    height: 4px;
+    background-color: #8E05C2;
+    bottom: -20px;
+    left: 0;
+    transition: 0.5s;
+  }
+  main #heading h1:hover::before {
+    width: 100%;
+  }
+
+  .hero input#email.active{
+    position: relative;
+  }
+  .hero input#email.active::after {
+    /* content: "please your email should be like example@gmail.com"; */
+    content: "";
+    position: absolute;
+    bottom:  -10;
+    left: 0;
+    font-size: 10px;
+    color: red;
+    width: 100%;
+    height: 100px;
+    background-color: rgb(142, 25, 25);
   }
